code: more content

--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Опросники</title>
+    <link rel="stylesheet" href="index.css" />
     <script src="node_modules/hyperapp/dist/hyperapp.js" defer></script>
     <!--<script src="https://unpkg.com/hyperapp@1.2.6/dist/hyperapp.js" defer></script>-->
-    <script src="node_modules/@hyperapp/router/dist/router.js" defer></script>
+    <script src="node_modules/hyperapp-hash-router/dist/index.js" defer></script>
     <!--<script src="https://unpkg.com/@hyperapp/router@0.7.0/dist/router.js" defer></script>-->
     <script src="dist/index.js" defer></script>
 </head>
